@@ -1,20 +1,12 @@
 package com.learning.progress.service.impl;
 
-import com.learning.progress.common.ActionType;
-import com.learning.progress.common.ClassStatus;
-import com.learning.progress.common.Const;
-import com.learning.progress.common.RoleName;
+import com.learning.progress.common.*;
 import com.learning.progress.dto.clazz.ClassDTO;
 import com.learning.progress.dto.clazz.ClassOverviewDTO;
 import com.learning.progress.dto.clazz.CreateClassRequest;
 import com.learning.progress.dto.clazz.UpdateClassRequest;
 import com.learning.progress.dto.DataResponse;
-import com.learning.progress.entity.Chapter;
-import com.learning.progress.entity.ClassChapter;
-import com.learning.progress.entity.ClassLesson;
-import com.learning.progress.entity.Clazz;
-import com.learning.progress.entity.Lesson;
-import com.learning.progress.entity.Syllabus;
+import com.learning.progress.entity.*;
 import com.learning.progress.exception.ApiException;
 import com.learning.progress.mapper.ClassMapper;
 import com.learning.progress.repository.*;
@@ -23,27 +15,25 @@ import com.learning.progress.service.ClassService;
 import com.learning.progress.util.AppValidator;
 import com.learning.progress.util.DataUtil;
 import com.learning.progress.util.JwtUtil;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.Validator;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
-public class ClassServiceImpl implements ClassService {
-
+public class ManagerClassServiceImpl implements ClassService {
     @Autowired
     private ClassRepository classRepository;
     @Autowired
@@ -63,22 +53,20 @@ public class ClassServiceImpl implements ClassService {
     @Autowired
     private JwtUtil jwtUtil;
     @Autowired
-    private Validator validator;
-    @Autowired
     private AppValidator appValidator;
 
     @Override
+    @Transactional(readOnly = true)
     public ClassOverviewDTO getClassOverview(Long id) {
-        Clazz clazz = classRepository.findById(id)
-                .filter(c -> c.getDeletedAt() == null)
-                .orElseThrow(() -> new ApiException(Const.CLASS.CLASS_NOT_FOUND, HttpStatus.NOT_FOUND.value()));
+        Clazz clazz = classRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new ApiException(Const.CLASS.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
         ClassOverviewDTO.SyllabusDTO syllabusDTO = null;
         if (clazz.getSyllabus() != null) {
             syllabusDTO = ClassOverviewDTO.SyllabusDTO.builder()
                     .id(clazz.getSyllabus().getId())
                     .syllabusName(clazz.getSyllabus().getSyllabusName())
-                    .syllabusCode(clazz.getSyllabus().getSyllabusCode()) // TODO: Add syllabusCode to Syllabus entity if needed
+                    .syllabusCode(clazz.getSyllabus().getSyllabusCode())
                     .build();
         }
 
@@ -86,12 +74,12 @@ public class ClassServiceImpl implements ClassService {
                 .id(clazz.getId())
                 .className(clazz.getClassName())
                 .classCode(clazz.getClassCode())
-                .teachers(null) // TODO: Fetch teacher data from Class-Teacher relationship
-                .teachingAssistants(new ArrayList<>()) // TODO: Fetch teaching assistants data
-                .startDate(null) // TODO: Add startDate to Clazz entity or fetch from related entity
-                .endDate(null) // TODO: Add endDate to Clazz entity or fetch from related entity
+                .teachers(null) // TODO: Fetch teacher data
+                .teachingAssistants(new ArrayList<>()) // TODO: Fetch teaching assistants
+                .startDate(null) // TODO: Add startDate to Clazz
+                .endDate(null) // TODO: Add endDate to Clazz
                 .status(clazz.getStatus())
-                .level(null) // TODO: Add level to Clazz entity or fetch from related entity
+                .level(null) // TODO: Add level to Clazz
                 .syllabus(syllabusDTO)
                 .build();
     }
@@ -99,36 +87,37 @@ public class ClassServiceImpl implements ClassService {
     @Override
     @Transactional
     public ClassDTO createClass(CreateClassRequest request) {
-        // Validate request
-        Set<ConstraintViolation<CreateClassRequest>> violations = validator.validate(request);
-        if (!violations.isEmpty()) {
-            throw new ApiException(violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", ")), HttpStatus.BAD_REQUEST.value());
-        }
+        // Validate dates
+        DataUtil.validateStartAndEndDate(request.getStartDate(), request.getEndDate());
 
-        // Kiểm tra syllabus
+        // Check syllabus
         Syllabus syllabus = syllabusRepository.findById(request.getSyllabusId())
                 .filter(s -> s.getDeletedAt() == null)
-                .orElseThrow(() -> new ApiException("Syllabus không tồn tại", HttpStatus.NOT_FOUND.value()));
+                .orElseThrow(() -> new ApiException(Const.SYLLABUS.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
-        String currentUser = jwtUtil.extractUsernameFromCurrentRequest();
-        OffsetDateTime now = OffsetDateTime.now();
         Long actionByUserId = jwtUtil.extractUserIdFromCurrentRequest();
 
-        // Tạo class
+        // Create class
         Clazz clazz = new Clazz();
         clazz.setClassName(request.getClassName());
         clazz.setSyllabus(syllabus);
         clazz.setAvatarUrl(request.getAvatarUrl());
-        clazz.setStatus(ClassStatus.ACTIVE);
+        OffsetDateTime today = OffsetDateTime.now();
+        if (request.getStartDate() != null && request.getStartDate().isAfter(today)) {
+            clazz.setStatus(ClassStatus.PENDING);
+        } else {
+            clazz.setStatus(ClassStatus.ACTIVE);
+        }
+
         Clazz savedClass = classRepository.saveAndFlush(clazz);
 
         String classCode = DataUtil.generateClassCode(savedClass.getId());
         savedClass.setClassCode(classCode);
         savedClass = classRepository.saveAndFlush(savedClass);
 
-        // Ghi lịch sử
+        // Save history
         String actionDetails = String.format(
-                "Đã tạo lớp %s với giáo trình %s",
+                Const.CLASS_HISTORY.CREATE_CLASS,
                 request.getClassName(),
                 syllabus.getSyllabusName()
         );
@@ -140,7 +129,7 @@ public class ClassServiceImpl implements ClassService {
                 RoleName.MANAGER.name()
         );
 
-        // Sao chép chapters
+        // Copy chapters
         List<Chapter> chapters = chapterRepository.findBySyllabusIdAndDeletedAtIsNullOrderByOrderNumberAsc(syllabus.getId());
         List<ClassChapter> classChapters = new ArrayList<>();
         for (Chapter chapter : chapters) {
@@ -150,7 +139,7 @@ public class ClassServiceImpl implements ClassService {
             classChapter.setOrderNumber(chapter.getOrderNumber());
             classChapters.add(classChapterRepository.save(classChapter));
 
-            // Sao chép lessons
+            // Copy lessons
             List<Lesson> lessons = lessonRepository.findByChapterIdAndDeletedAtIsNullOrderByOrderNumberAsc(chapter.getId());
             for (Lesson lesson : lessons) {
                 ClassLesson classLesson = new ClassLesson();
@@ -166,24 +155,47 @@ public class ClassServiceImpl implements ClassService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ClassDTO getClass(Long id) {
-        Clazz clazz = classRepository.findById(id)
-                .filter(c -> c.getDeletedAt() == null)
-                .orElseThrow(() -> new ApiException("Class không tồn tại", HttpStatus.NOT_FOUND.value()));
+        Clazz clazz = classRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new ApiException(Const.CLASS.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
         return classMapper.toClassDTO(clazz);
     }
 
     @Override
-    public DataResponse<List<ClassDTO>> getClassList(int page, int size, String searchText) {
-        Page<Clazz> classPage = classRepository.findBySearchText(searchText, PageRequest.of(page, size, Sort.by("createdAt").ascending()));
-        List<ClassDTO> responses = classPage.getContent().stream()
+    @Transactional(readOnly = true)
+    public DataResponse<List<ClassDTO>> getClassList(int page, int size, String searchText, String status, Long syllabusId,
+                                                     String startDateFrom, String startDateTo, String endDateFrom, String endDateTo,
+                                                     String sortBy, String sortDir) {
+        appValidator.validatePaginationParams(page, size);
+        appValidator.validateSortParams(
+                List.of("createdAt", "className", "classCode", "status", "startDate", "endDate"),
+                sortBy, sortDir);
+
+        Pageable pageable = PageRequest.of(
+                page, size,
+                sortDir.equalsIgnoreCase("asc") ? Sort.by(sortBy).ascending() : Sort.by(sortBy).descending()
+        );
+
+        LocalDate startFrom = DataUtil.parseAndValidateDate(startDateFrom, Const.VALIDATE_INPUT.regexDate, "startDateFrom");
+        LocalDate startTo = DataUtil.parseAndValidateDate(startDateTo, Const.VALIDATE_INPUT.regexDate, "startDateTo");
+        LocalDate endFrom = DataUtil.parseAndValidateDate(endDateFrom, Const.VALIDATE_INPUT.regexDate, "endDateFrom");
+        LocalDate endTo = DataUtil.parseAndValidateDate(endDateTo, Const.VALIDATE_INPUT.regexDate, "endDateTo");
+
+        // Manager: View ALL classes
+        Page<Clazz> classPage = classRepository.searchClassesWithFilters(
+                searchText == null ? "" : searchText,
+                status, syllabusId, startFrom, startTo, endFrom, endTo, pageable);
+
+        List<ClassDTO> classDTOs = classPage.getContent()
+                .stream()
                 .map(classMapper::toClassDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return DataResponse.<List<ClassDTO>>builder()
                 .success(true)
-                .message("Thành công")
-                .data(responses)
+                .message(Const.RESULT_MESSAGE_CODE.RETRIEVE_SUCCESSFUL)
+                .data(classDTOs)
                 .page(page)
                 .size(size)
                 .totalElements(classPage.getTotalElements())
@@ -194,63 +206,77 @@ public class ClassServiceImpl implements ClassService {
     @Override
     @Transactional
     public ClassDTO updateClass(Long id, UpdateClassRequest request) {
-        Clazz clazz = classRepository.findById(id)
-                .filter(c -> c.getDeletedAt() == null)
-                .orElseThrow(() -> new ApiException("Class không tồn tại", HttpStatus.NOT_FOUND.value()));
+        Clazz clazz = classRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new ApiException(Const.CLASS.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
-        // Validate request
-        Set<ConstraintViolation<UpdateClassRequest>> violations = validator.validate(request);
-        if (!violations.isEmpty()) {
-            throw new ApiException(violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", ")), HttpStatus.BAD_REQUEST.value());
+        if (clazz.getStatus() == ClassStatus.FINISHED) {
+            throw new ApiException(Const.CLASS.FINISHED_CLASS, HttpStatus.BAD_REQUEST.value());
         }
 
-        String currentUser = jwtUtil.extractUsernameFromCurrentRequest();
-        OffsetDateTime now = OffsetDateTime.now();
-        Long actionByUserId = jwtUtil.extractUserIdFromCurrentRequest();
-        // Ghi lịch sử
-        String actionDetails = String.format(
-                "Đã cập nhật lớp %s với avatar %s",
-                request.getClassName(),
-                request.getAvatarUrl()
-        );
-        classHistoryService.saveClassHistory(
-                id,
-                actionDetails,
-                actionByUserId,
-                ActionType.UPDATE_CLASS.name(),
-                RoleName.MANAGER.name()
-        );
+        DataUtil.validateStartAndEndDate(request.getStartDate(), request.getEndDate());
 
-        clazz.setClassName(request.getClassName());
-        clazz.setAvatarUrl(request.getAvatarUrl());
+        Long actionByUserId = jwtUtil.extractUserIdFromCurrentRequest();
+        StringBuilder details = new StringBuilder();
+
+        if (request.getClassName() != null && !request.getClassName().equals(clazz.getClassName())) {
+            details.append(String.format("name changed to '%s'; ", request.getClassName()));
+            clazz.setClassName(request.getClassName());
+        }
+
+        if (request.getAvatarUrl() != null && !request.getAvatarUrl().equals(clazz.getAvatarUrl())) {
+            details.append(String.format("avatar set to %s; ", request.getAvatarUrl()));
+            clazz.setAvatarUrl(request.getAvatarUrl());
+        }
+
+        if (request.getStartDate() != null && !request.getStartDate().equals(clazz.getStartDate())) {
+            details.append(String.format("start date set to %s; ", request.getStartDate()));
+            clazz.setStartDate(request.getStartDate());
+        }
+
+        if (request.getEndDate() != null && !request.getEndDate().equals(clazz.getEndDate())) {
+            details.append(String.format("end date set to %s; ", request.getEndDate()));
+            clazz.setEndDate(request.getEndDate());
+        }
+
+        String changeDetails = details.toString().replaceAll("; $", "");
+        if (!changeDetails.isEmpty()) {
+            String actionDetails = String.format(
+                    Const.CLASS_HISTORY.UPDATE_CLASS,
+                    clazz.getClassName(),
+                    changeDetails
+            );
+            classHistoryService.saveClassHistory(
+                    id,
+                    actionDetails,
+                    actionByUserId,
+                    ActionType.UPDATE_CLASS.name(),
+                    RoleName.MANAGER.name()
+            );
+        }
 
         return classMapper.toClassDTO(classRepository.save(clazz));
     }
 
     @Override
     @Transactional
-    public String changeClassStatusManually(Long id, String newStatus) {
-        Clazz clazz = classRepository.findById(id)
-                .filter(c -> c.getDeletedAt() == null)
-                .orElseThrow(() -> new ApiException(Const.CLASS.CLASS_NOT_FOUND, HttpStatus.NOT_FOUND.value()));
+    public String changeClassStatusManually(Long id, String status) {
+        Clazz clazz = classRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new ApiException(Const.CLASS.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
         Long actionByUserId = jwtUtil.extractUserIdFromCurrentRequest();
         ClassStatus oldStatus = clazz.getStatus();
 
         appValidator.validateAllowedEnumValue(ClassStatus.class,
-                newStatus,
+                status,
                 Set.of(ClassStatus.ACTIVE, ClassStatus.FINISHED, ClassStatus.INACTIVE));
 
-
-        // Cập nhật trạng thái
-        clazz.setStatus(ClassStatus.valueOf(newStatus));
+        clazz.setStatus(ClassStatus.valueOf(status));
         classRepository.save(clazz);
 
-        // Ghi lịch sử
         String actionDetails = String.format(
-                "Đã chuyển trạng thái lớp %s từ %s sang %s",
+                Const.CLASS_HISTORY.CHANGE_STATUS,
                 clazz.getClassName(),
                 oldStatus,
-                newStatus
+                status
         );
         classHistoryService.saveClassHistory(
                 id,
@@ -260,22 +286,23 @@ public class ClassServiceImpl implements ClassService {
                 RoleName.MANAGER.name()
         );
 
-        classRepository.save(clazz);
         return actionDetails;
     }
 
     @Override
     @Transactional
     public void deleteClass(Long id) {
-        Clazz clazz = classRepository.findById(id)
-                .filter(c -> c.getDeletedAt() == null)
-                .orElseThrow(() -> new ApiException("Class không tồn tại", HttpStatus.NOT_FOUND.value()));
-        String currentUser = jwtUtil.extractUsernameFromCurrentRequest();
-        Long actionByUserId = jwtUtil.extractUserIdFromCurrentRequest();
+        Clazz clazz = classRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new ApiException(Const.CLASS.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
-        // Ghi lịch sử
+        if (clazz.getStatus() != ClassStatus.PENDING) {
+            throw new ApiException(String.format(Const.CLASS.CANNOT_DELETE_ACTIVE_CLASS, clazz.getClassName(), clazz.getStatus()),
+                    HttpStatus.BAD_REQUEST.value());
+        }
+
+        Long actionByUserId = jwtUtil.extractUserIdFromCurrentRequest();
         String actionDetails = String.format(
-                "Đã xóa lớp %s",
+                Const.CLASS_HISTORY.DELETE_CLASS,
                 clazz.getClassName()
         );
         classHistoryService.saveClassHistory(
@@ -287,7 +314,7 @@ public class ClassServiceImpl implements ClassService {
         );
 
         OffsetDateTime now = OffsetDateTime.now();
-        clazz.setDeletedBy(currentUser);
+        clazz.setDeletedBy(jwtUtil.extractEmailPrefixFromCurrentRequest());
         clazz.setDeletedAt(now);
         classRepository.save(clazz);
     }
